overlays/dev/network-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: talkking-dev-ingress
  namespace: talkking-dev
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=3600
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.type=lb_cookie,stickiness.lb_cookie.duration_seconds=86400
spec:
  rules:
    - http:
        paths:
          # 1. [기존 스펙] 웹소켓 및 채팅 데이터 통로
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: chat-service
                port:
                  number: 80

          # 3. 🔥 [추가 필수] 실시간 알림 웹소켓용 통로 대개방!
          - path: /ws-notif
            pathType: Prefix
            backend:
              service:
                name: chat-service
                port:
                  number: 80

          # 2. [기존 스펙] 내장 로그인 화면 및 정적 파일 통로 (맨 아래에 두는 것이 정석)
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chat-service
                port:
                  number: 80
